--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "chart.js": "^4.4.9",
     "googleapis": "^150.0.1",
     "html2canvas": "^1.4.1",
+    "install": "^0.13.0",
     "jspdf": "^3.0.1",
     "lucide-react": "^0.513.0",
     "react": "^19.1.0",
