--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.2",
     "recharts": "^2.15.3"
   },
